Fix image in section intro on mobile devices

--- a/sass/components/sections/_section-intro.scss
+++ b/sass/components/sections/_section-intro.scss
@@ -44,6 +44,8 @@
 	}
 
 	@include breakpoint(mobile) {
+		padding: 30px 0 0;
+
 		.section__flex {
 			flex-wrap: wrap;
 			text-align: center;
@@ -60,14 +62,7 @@
 
 		.section__image {
 			width: 100%;
-			order: -1;
 			text-align: center;
-			margin-bottom: 20px;
-
-			img {
-				max-height: 190px;
-				width: auto;
-			}
 		}
 	}
 
